# MCP_Server

./: .gitignore  .python-version  README.md  pyproject.toml  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
examples/: sample_module.py
pytest_pipeline_mcp/: __init__.py  server.py
pytest_pipeline_mcp/core/: __init__.py
pytest_pipeline_mcp/core/analyzer/: __init__.py  analyzer.py  models.py  parser.py  syntax_validator.py  type_hint_checker.py
pytest_pipeline_mcp/core/fixer/: __init__.py  fixer.py  models.py
pytest_pipeline_mcp/core/generators/: __init__.py  ai.py  base.py  template.py
pytest_pipeline_mcp/core/repo_analysis/: __init__.py  models.py
pytest_pipeline_mcp/core/runner/: __init__.py  executor.py
pytest_pipeline_mcp/handlers/core/: __init__.py  analyze_code.py  fix_code.py  generate_tests.py  run_tests.py
pytest_pipeline_mcp/handlers/github/: __init__.py  analyze_repository.py  comment_test_results.py  create_test_pr.py  get_repo_file.py
pytest_pipeline_mcp/services/: __init__.py  analysis.py  base.py  code_loader.py  execution.py  fixing.py  generation.py  github.py  repository_analysis.py
src/: __init__.py  constants.py  server.py
src/analyzer/: analyzer.py
src/core/: __init__.py  analyzer.py  complexity_analyzer.py  models.py  parser.py
src/core/analyzer/: models.py  type_hint_checker.py
src/core/fixer/: fixer.py
src/core/generators/: ai.py  template.py
src/core/repository/: __init__.py  models.py
src/core/runner/: executor.py  models.py
src/coverage/: __init__.py
src/fixer/: code_fixer.py  models.py
src/generators/: __init__.py  ai_enhancer.py  base.py  template_generator.py
src/generators/evidence/: boundary_values.py  doctest_extractor.py  exception_detector.py  type_assertions.py
src/handlers/core/: analyze_code.py  fix_code.py
src/runner/: __init__.py  executor.py  models.py
src/services/: __init__.py  analysis.py  base.py  code_loader.py  execution.py  fixing.py  generation.py  github.py  repository_analysis.py
src/tools/: __init__py
src/validation/: __init__.py  type_hint_checker.py
tests/: __init__.py  test_ai_enhancer.py  test_core.py  test_doctest_extractor.py  test_exception_detector.py  test_fixer.py  test_generators.py  test_github.py  test_integration.py  test_parser_params.py  test_runner.py  test_server.py  test_services.py  test_tool_handlers.py  test_type_assertions.py
(+35 files in other folders)
