[project]
name = "pytest-generator-mcp"
version = "0.1.0"
description = "MCP server that generates pytest tests using static code analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Hadasa", email = "h0548449206@gmail.com" }
]
keywords = ["mcp", "pytest", "test-generation", "code-analysis"]

dependencies = [
    "mcp>=1.0.0",
    "mcp[cli]>=1.25.0",
    "openai>=2.14.0",
    # GitHub integration
    "pygithub>=2.1.1",
    "gitpython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
[project.scripts]
pytest-generator-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.10",
]
